--- a/G.CONF
+++ b/G.CONF
@@ -1,13 +1,13 @@
-#[Rule]
+[Rule]
 ## DNS
-#IP-CIDR,1.1.1.1/32,PROXY
-#IP-CIDR,1.0.0.1/32,PROXY
-#IP-CIDR,8.8.8.8/32,PROXY
-#IP-CIDR,8.8.4.4/32,PROXY
-#IP-CIDR,9.9.9.9/32,PROXY
-#IP-CIDR,149.112.112.112/32,PROXY
-#IP-CIDR,208.67.222.222/32,PROXY
-#IP-CIDR,208.67.220.220/32,PROXY
+IP-CIDR,1.1.1.1/32,PROXY
+IP-CIDR,1.0.0.1/32,PROXY
+IP-CIDR,8.8.8.8/32,PROXY
+IP-CIDR,8.8.4.4/32,PROXY
+IP-CIDR,9.9.9.9/32,PROXY
+IP-CIDR,149.112.112.112/32,PROXY
+IP-CIDR,208.67.222.222/32,PROXY
+IP-CIDR,208.67.220.220/32,PROXY
 
 # Unbreak
 # > General
