--- a/G.CONF
+++ b/G.CONF
@@ -9,6 +9,9 @@ IP-CIDR,149.112.112.112/32,PROXY
 IP-CIDR,208.67.222.222/32,PROXY
 IP-CIDR,208.67.220.220/32,PROXY
 
+DOMAIN-SUFFIX,adnmb2.com,DIRECT
+DOMAIN-SUFFIX,fastmirror.org,DIRECT
+
 # Unbreak
 # > General
 USER-AGENT,coffeecorp*,DIRECT
