--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -8,6 +8,9 @@ ipv6 = false
 
 [Rule]
 # 自定义规则
+DOMAIN,api-h2.tiktokv.com,PROXY
+DOMAIN,api2-16-h2.musical.ly,PROXY
+DOMAIN,api2-19-h2.musical.ly,PROXY
 DOMAIN-SUFFIX,adnmb.com,DIRECT
 DOMAIN-SUFFIX,adnmb2.com,DIRECT
 DOMAIN-SUFFIX,acfunwiki.org,DIRECT
@@ -903,7 +906,9 @@ localhost = 127.0.0.1
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
 ^http://reject.example.com reject 
+(.*video_id=\w{32})(.*watermark=)(.*) $1 302
+((carrier|account|sys)_region=)CN JP 302
 
-
-
-
+[MITM]
+hostname = ,api*.tiktokv.com,*.musical.ly,
+enable = true
