--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2019-12-26 18:18:45
+# Shadowrocket
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
