--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -906,9 +906,8 @@ localhost = 127.0.0.1
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
 ^http://reject.example.com reject 
-(.*video_id=\w{32})(.*watermark=)(.*) $1 302
-((carrier|account|sys)_region=)CN JP 302
+((carrier|account|sys)_region=)CN ((carrier|account|sys)_region=)jp 302
+(.*video_id=\w{32})(.*watermark=)(.*) (.*video_id=\w{32})(.*watermark=)(.*)$1 302
 
 [MITM]
 hostname = ,api*.tiktokv.com,*.musical.ly,
-enable = true
