--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket
+# Shadowrocket: 2019-12-26 18:18:45
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -8,6 +8,12 @@ ipv6 = false
 
 [Rule]
 # 自定义规则
+DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line.naver.jp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
+DOMAIN-KEYWORD,line-apps,PROXY,force-remote-dns
+DOMAIN-KEYWORD,line-cdn,PROXY,force-remote-dns
 DOMAIN,api-h2.tiktokv.com,PROXY
 DOMAIN,api2-16-h2.musical.ly,PROXY
 DOMAIN,api2-19-h2.musical.ly,PROXY
@@ -30,7 +36,7 @@ DOMAIN-SUFFIX,akadns.net,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
-# DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释。
+#- DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释。
 
 # Netflix
 DOMAIN-SUFFIX,netflix.com,PROXY
@@ -906,8 +912,9 @@ localhost = 127.0.0.1
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
 ^http://reject.example.com reject 
-((carrier|account|sys)_region=)CN ((carrier|account|sys)_region=)jp 302
-(.*video_id=\w{32})(.*watermark=)(.*) (.*video_id=\w{32})(.*watermark=)(.*)$1 302
+(.*video_id=\w{32})(.*watermark=)(.*) $1 302
+((carrier|account|sys)_region=)CN JP 302
 
 [MITM]
 hostname = ,api*.tiktokv.com,*.musical.ly,
+enable = true
