--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -15,8 +15,8 @@ DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
 DOMAIN-KEYWORD,line-apps,PROXY,force-remote-dns
 DOMAIN-KEYWORD,line-cdn,PROXY,force-remote-dns
 DOMAIN,api-h2.tiktokv.com,PROXY
-DOMAIN,api2-16-h2.musical.ly,PROXY
-DOMAIN,api2-19-h2.musical.ly,PROXY
+DOMAIN-KEYWORD,musical.ly,PROXY
+#DOMAIN,api2-19-h2.musical.ly,PROXY
 DOMAIN-SUFFIX,adnmb.com,DIRECT
 DOMAIN-SUFFIX,adnmb2.com,DIRECT
 DOMAIN-SUFFIX,acfunwiki.org,DIRECT
