--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2019-12-26 18:18:45
+# Shadowrocket
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -7,21 +7,11 @@ dns-server = system
 ipv6 = false
 
 [Rule]
-# 自定义规则
-DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line.naver.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
-DOMAIN-KEYWORD,line-apps,PROXY,force-remote-dns
-DOMAIN-KEYWORD,line-cdn,PROXY,force-remote-dns
-DOMAIN,api-h2.tiktokv.com,PROXY
-DOMAIN-KEYWORD,musical.ly,PROXY
-#DOMAIN,api2-19-h2.musical.ly,PROXY
+# Custom
 DOMAIN-SUFFIX,adnmb.com,DIRECT
 DOMAIN-SUFFIX,adnmb2.com,DIRECT
 DOMAIN-SUFFIX,acfunwiki.org,DIRECT
 DOMAIN-SUFFIX,fastmirror.org,DIRECT
-DOMAIN-SUFFIX,javtorrent.re,PROXY
 IP-CIDR,47.88.137.155/32,DIRECT
 
 # Apple
@@ -52,6 +42,19 @@ DOMAIN-SUFFIX,api.amplitude.com,DIRECT
 DOMAIN-SUFFIX,app.smartmailcloud.com,DIRECT
 DOMAIN-SUFFIX,firebaseio.com,DIRECT
 DOMAIN-SUFFIX,gate.hockeyapp.net,DIRECT
+
+# Line
+DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line.naver.jp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
+DOMAIN-SUFFIX,line-cdn.net,PROXY,force-remote-dns
+DOMAIN-KEYWORD,line-apps,PROXY,force-remote-dns
+DOMAIN-KEYWORD,line-cdn,PROXY,force-remote-dns
+
+# Tiktok
+DOMAIN,api-h2.tiktokv.com,PROXY
+DOMAIN-KEYWORD,musical.ly,PROXY
+#DOMAIN,api2-19-h2.musical.ly,PROXY
 
 # ====== Snippet Start ======
 # 该片段来自 https://github.com/ConnersHua/Profiles/blob/master/Clash/Global.yml
@@ -717,6 +720,7 @@ DOMAIN-SUFFIX,js.revsci.net,PROXY
 DOMAIN-SUFFIX,jshint.com,PROXY
 DOMAIN-SUFFIX,jtvnw.net,PROXY
 DOMAIN-SUFFIX,justgetflux.com,PROXY
+DOMAIN-SUFFIX,javtorrent.re,PROXY
 DOMAIN-SUFFIX,kat.cr,PROXY
 DOMAIN-SUFFIX,klip.me,PROXY
 DOMAIN-SUFFIX,libsyn.com,PROXY
