--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -53,8 +53,8 @@ DOMAIN-KEYWORD,line-cdn,PROXY,force-remote-dns
 
 # Tiktok
 DOMAIN,api-h2.tiktokv.com,PROXY
+DOMAIN,api2-16-h2.musical.ly,PROXY
 DOMAIN-KEYWORD,musical.ly,PROXY
-#DOMAIN,api2-19-h2.musical.ly,PROXY
 
 # ====== Snippet Start ======
 # 该片段来自 https://github.com/ConnersHua/Profiles/blob/master/Clash/Global.yml
@@ -916,8 +916,8 @@ localhost = 127.0.0.1
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
 ^http://reject.example.com reject 
-(.*video_id=\w{32})(.*watermark=)(.*) $1 302
-((carrier|account|sys)_region=)CN JP 302
+((carrier|account|sys)_region=)CN ((carrier|account|sys)_region=)jp 302
+(.*video_id=\w{32})(.*watermark=)(.*) (.*video_id=\w{32})(.*watermark=)(.*)$1 302
 
 [MITM]
 hostname = ,api*.tiktokv.com,*.musical.ly,
