QR scanning unblocked.

--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -351,7 +351,7 @@ DOMAIN,cpro.baidu.com,REJECT
 DOMAIN,eclick.baidu.com,REJECT
 DOMAIN,msg.71.am,REJECT
 DOMAIN,mtj.baidu.com,REJECT
-DOMAIN,nsclick.baidu.com,REJECT
+#DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
 IP-CIDR,60.210.17.12/24,REJECT
 DOMAIN,acjs.aliyun.com,REJECT
